@@ -1,6 +1,6 @@
 <p style="text-align: center">{{TEXT}}</p>
 
-<div id="mfa_container"></div>
+<div id="mfa_container" class="scrollable_container"></div>
 
 <script>
     // Container Data
