@@ -1,3 +1,7 @@
+## New changes
+
+- Fix table visualization HTML code to work on server again
+
 ## Version 1.2.1
 
 - Fix cache issue
